# pmg-dolfinx-lumi

./: INSTALL.md  LICENSE  README.md  hypre-rocm-lumi.yaml
pmg-example/: CMakeLists.txt  main.cpp  poisson.py
src/: amg.hpp  cg.hpp  chebyshev.hpp  coarse_solver.hpp  interpolate.hpp  laplacian.hpp  mesh.hpp  operators.hpp  pmg.hpp  vector.hpp
